@@ -28,7 +28,7 @@ public class XnatObjectIntrospectionServiceImpl implements XnatObjectIntrospecti
     @Override
     public Boolean isModified(XnatExperimentdataI experiment) {
         List<Map<String, Object>> result = simpleQuery(QUERY_IS_EXPERIMENT_MODIFIED,"experimentId", experiment.getId());
-        if (!result.isEmpty() && result.get(0).containsKey("modified") && result.get(0).get("modified").equals(1)) return true;
+        if (!result.isEmpty() && result.getFirst().containsKey("modified") && result.getFirst().get("modified").equals(1)) return true;
         else return false;
     }
 
@@ -54,11 +54,7 @@ public class XnatObjectIntrospectionServiceImpl implements XnatObjectIntrospecti
     @Override
     public Boolean storedInDatabase(XnatSubjectdataI subject) {
         List<Map<String, Object>> result = simpleQuery(QUERY_SUBJECTDATA, "subjectId", subject.getId());
-        if(result != null && !result.isEmpty()){
-            return true;
-        } else {
-            return false;
-        }
+        return result != null && !result.isEmpty();
     }
 
     @Override
