@@ -3,11 +3,7 @@ package org.nrg.xnat.utils;
 
 import lombok.extern.slf4j.Slf4j;
 import org.hamcrest.Matchers;
-import org.junit.AfterClass;
-import org.junit.BeforeClass;
-import org.junit.Ignore;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.*;
 import org.junit.rules.ExpectedException;
 import org.junit.runner.RunWith;
 import org.mockito.Mockito;
@@ -16,17 +12,16 @@ import org.nrg.xdat.bean.CatCatalogBean;
 import org.nrg.xdat.bean.CatEntryBean;
 import org.nrg.xdat.bean.ClassMappingFactory;
 import org.nrg.xdat.model.CatEntryI;
+import org.nrg.xdat.preferences.SiteConfigPreferences;
 import org.nrg.xnat.helpers.resource.XnatResourceInfo;
 import org.nrg.xnat.junit.ConcurrentJunitRunner;
-import org.powermock.api.mockito.PowerMockito;
-import org.powermock.core.classloader.annotations.PowerMockIgnore;
-import org.powermock.modules.junit4.PowerMockRunner;
-import org.powermock.modules.junit4.PowerMockRunnerDelegate;
-import org.powermock.reflect.Whitebox;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.*;
+import java.lang.reflect.Field;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -35,9 +30,7 @@ import static org.hamcrest.Matchers.is;
 import static org.junit.Assert.*;
 
 
-@RunWith(PowerMockRunner.class)
-@PowerMockRunnerDelegate(ConcurrentJunitRunner.class)
-@PowerMockIgnore({"org.apache.*", "java.*", "javax.*", "org.w3c.*", "com.sun.*", "org.xml.sax.*"})
+@RunWith(ConcurrentJunitRunner.class)
 @Slf4j
 public class TestThreadAndProcessFileLock {
 
@@ -45,11 +38,22 @@ public class TestThreadAndProcessFileLock {
     private static File TEST_CATALOG_FILE;
     private static File TEST_DCMCATALOG;
     private static File TEST_DCMCATALOG_PERM;
-    
+    private static Object savedPreferences;
+
     private static final String fakeProject = null;
 
     @BeforeClass
     public static void setup() throws Exception {
+        // Replace cached PREFERENCES with a mock that returns a writable temp path,
+        // preventing getCachePath() from using a non-writable path like /data/xnat/cache
+        // that may have been set by a prior test's Spring context
+        Field prefsField = ThreadAndProcessFileLock.class.getDeclaredField("PREFERENCES");
+        prefsField.setAccessible(true);
+        savedPreferences = prefsField.get(null);
+        SiteConfigPreferences mockPrefs = Mockito.mock(SiteConfigPreferences.class);
+        Mockito.when(mockPrefs.getCachePath()).thenReturn(System.getProperty("java.io.tmpdir"));
+        prefsField.set(null, mockPrefs);
+
         TMPDIR.mkdirs();
 
         final String catFilename = "DEBUG_OUTPUT_catalog.xml";
@@ -57,13 +61,13 @@ public class TestThreadAndProcessFileLock {
         final String subdir = "catalogs";
 
         File permFile = ResourceManager.getInstance().getTestResourceFile(
-                Paths.get(subdir, catFilename).toString());
+                Path.of(subdir, catFilename).toString());
         TEST_CATALOG_FILE = new File(TMPDIR, catFilename);
         rewriteFileWithCatalogUtils(permFile);
         copyCatalog(TEST_CATALOG_FILE, permFile);
 
         TEST_DCMCATALOG_PERM = ResourceManager.getInstance().getTestResourceFile(
-                Paths.get(subdir, dcmFilename).toString());
+                Path.of(subdir, dcmFilename).toString());
         TEST_DCMCATALOG = new File(TMPDIR, dcmFilename);
 
         rewriteFileWithCatalogUtils(TEST_DCMCATALOG_PERM);
@@ -73,9 +77,10 @@ public class TestThreadAndProcessFileLock {
         ClassMappingFactory.getInstance().getElements();
 
         // Stub getChecksumConfiguration check
-        PowerMockito.spy(CatalogUtils.class);
-        //doReturn(false).when(CatalogUtils.class, "getChecksumConfiguration"); // doesn't work, not sure why
-        Whitebox.setInternalState(CatalogUtils.class, "_checksumConfig", new AtomicBoolean(false));
+        Field privateField = CatalogUtils.class.getDeclaredField("_checksumConfig");
+        privateField.setAccessible(true);
+        privateField.set(null, new AtomicBoolean(false));
+        assertEquals(false, CatalogUtils.getChecksumConfiguration());
     }
 
     private static void rewriteFileWithCatalogUtils(File catFile) throws Exception {
@@ -93,8 +98,13 @@ public class TestThreadAndProcessFileLock {
     }
 
     @AfterClass
-    public static void cleanup() throws IOException {
+    public static void cleanup() throws Exception {
         org.apache.commons.io.FileUtils.deleteDirectory(TMPDIR);
+
+        // Restore cached PREFERENCES for other tests
+        Field prefsField = ThreadAndProcessFileLock.class.getDeclaredField("PREFERENCES");
+        prefsField.setAccessible(true);
+        prefsField.set(null, savedPreferences);
     }
 
     @Test
